--- a/notebooks/olist_business_performance_analysis.ipynb
+++ b/notebooks/olist_business_performance_analysis.ipynb
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "6febc64a-5a5d-47d8-9148-a831db0d06e3",
    "metadata": {},
    "outputs": [
@@ -168,7 +168,7 @@
     "from sqlalchemy import create_engine\n",
     "\n",
     "username = \"postgres\"\n",
-    "password = \"Vansh7206\"\n",
+    "password = \"\"\n",
     "host = \"localhost\"\n",
     "port = \"5432\"\n",
     "database = \"ecommerce_analysis\"\n",
